@@ -1,5 +1,4 @@
 from datetime import timedelta
-from inspect import getargspec
 from logging import getLogger
 from socket import error, inet_pton, AF_INET6
 
@@ -76,30 +75,17 @@ def get_client_username(request, credentials=None):
 
     The order of preference for fetching the username is as follows:
 
-    1. If configured, use `AXES_USERNAME_CALLABLE`, and supply either `request` or `request, credentials` as arguments
-       depending on the function argument count (multiple signatures are supported for backwards compatibility)
-    2. If given, use `credentials` and fetch username from `AXES_USERNAME_FORM_FIELD` (defaults to `username`)
-    3. Use request.POST and fetch username from `AXES_USERNAME_FORM_FIELD` (defaults to `username`)
+    1. If configured, use ``AXES_USERNAME_CALLABLE``, and supply ``request, credentials`` as arguments
+    2. If given, use ``credentials`` and fetch username from ``AXES_USERNAME_FORM_FIELD`` (defaults to ``username``)
+    3. Use request.POST and fetch username from ``AXES_USERNAME_FORM_FIELD`` (defaults to ``username``)
 
-    :param request: incoming Django `HttpRequest` or similar object from authentication backend or other source
-    :param credentials: incoming credentials `dict` or similar object from authentication backend or other source
+    :param request: incoming Django ``HttpRequest`` or similar object from authentication backend or other source
+    :param credentials: incoming credentials ``dict`` or similar object from authentication backend or other source
     """
 
     if settings.AXES_USERNAME_CALLABLE:
-        num_args = len(
-            getargspec(settings.AXES_USERNAME_CALLABLE).args  # pylint: disable=deprecated-method
-        )
-
-        if num_args == 2:
-            logger.debug('Using AXES_USERNAME_CALLABLE for username with two arguments: request, credentials')
-            return settings.AXES_USERNAME_CALLABLE(request, credentials)
-
-        if num_args == 1:
-            logger.debug('Using AXES_USERNAME_CALLABLE for username with one argument: request')
-            return settings.AXES_USERNAME_CALLABLE(request)
-
-        logger.error('Using AXES_USERNAME_CALLABLE for username failed: wrong number of arguments %s', num_args)
-        raise TypeError('Wrong number of arguments in function call to AXES_USERNAME_CALLABLE', num_args)
+        logger.debug('Using AXES_USERNAME_CALLABLE to get username')
+        return settings.AXES_USERNAME_CALLABLE(request, credentials)
 
     if credentials:
         logger.debug('Using `credentials` to get username with key AXES_USERNAME_FORM_FIELD')
